conformance/tests/httproute-omitted-backendrefs.yaml
# Copyright IBM Corp. 2019, 2022
# SPDX-License-Identifier: Apache-2.0

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: omitted-backendrefs
  namespace: gateway-conformance-infra
spec:
  parentRefs:
  - name: same-namespace
  rules:
  - matches:
    - path:
        type: Exact
        value: /omitted-no-forward
  - matches:
    - path:
        type: Exact
        value: /empty-no-forward
    backendRefs: []
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: infra-backend-v1
      port: 8080
